--- a/styles/style.css
+++ b/styles/style.css
@@ -4,12 +4,65 @@
   box-sizing: border-box;
 }
 
+li {
+  list-style: none;
+}
+
+.wrap {
+  width: 500px;
+  margin: 150px auto;
+}
+
+.js-clock h1 {
+  color: white;
+  font-size: 6rem;
+  text-align: center;
+}
+
 .form,
 .greetings {
   display: none;
+  color: white;
+  font-size: 2rem;
+  text-align: center;
 }
 
 .showing {
   display: block;
+}
+
+.js-toDoForm {
+  margin: 20px 0;
+  width: 100%;
+  text-align: center;
+}
+
+.js-toDoForm input {
+  padding: 5px;
+  font-size: 1.3rem;
+}
+
+.js-toDoList {
+  color: white;
+  font-size: 1.5rem;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.bgImg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  animation: fadeIn .5s linear;
 }
 /*# sourceMappingURL=style.css.map */
