--- a/styles/style.css
+++ b/styles/style.css
@@ -43,8 +43,30 @@ li {
 }
 
 .js-toDoList {
+  width: 100%;
+  height: 350px;
+  overflow-y: scroll;
   color: white;
   font-size: 1.5rem;
+}
+
+.js-toDoList li {
+  margin: 18px 0;
+}
+
+.js-toDoList li button {
+  font-size: 1.3rem;
+  color: red;
+  background: none;
+  border: 0.5px solid #d3cece;
+  text-align: center;
+  padding: 1px;
+  margin: 0 20px;
+  cursor: pointer;
+}
+
+.js-toDoList li button:hover {
+  background: cornsilk;
 }
 
 @keyframes fadeIn {
