--- a/styles/style.scss
+++ b/styles/style.scss
@@ -44,8 +44,27 @@ li{
 }
 
 .js-toDoList{
+  width: 100%;
+  height: 350px;
+  overflow-y: scroll;
   color: white;
   font-size: 1.5rem;
+  li{
+    margin: 18px 0;
+    button{
+      font-size: 1.3rem;
+      color: red;
+      background: none;
+      border: 0.5px solid rgb(211, 206, 206);
+      text-align: center;
+      padding: 1px;
+      margin: 0 20px;
+      cursor: pointer;
+      &:hover{
+        background: cornsilk;
+      }
+    }
+  }
 }
 
 @keyframes fadeIn{
