--- a/styles/style.scss
+++ b/styles/style.scss
@@ -53,9 +53,9 @@ li{
     margin: 18px 0;
     button{
       font-size: 1.3rem;
-      color: red;
+      color: white;
       background: none;
-      border: 0.5px solid rgb(211, 206, 206);
+      border: none;
       text-align: center;
       padding: 1px;
       margin: 0 20px;
