--- a/styles/style.css
+++ b/styles/style.css
@@ -69,6 +69,18 @@ li {
   background: cornsilk;
 }
 
+.js-weather {
+  position: absolute;
+  top: 10px;
+  right: 50px;
+  color: white;
+  font-size: 1.5rem;
+}
+
+.js-weather span {
+  font-size: 1.3rem;
+}
+
 @keyframes fadeIn {
   from {
     opacity: 0;
