--- a/styles/style.scss
+++ b/styles/style.scss
@@ -67,6 +67,19 @@ li{
   }
 }
 
+.js-weather{
+  position: absolute;
+  top: 10px;
+  right: 50px;
+  color: white;
+  font-size: 1.5rem;
+  span{
+    font-size: 1.3rem;
+  }
+}
+
+
+
 @keyframes fadeIn{
    from{
      opacity: 0;
